--- a/responsive.css
+++ b/responsive.css
@@ -3,7 +3,7 @@
         background-position: right 0px top 0px;
     }
 }
-
+/*aiu*/
 @media all and (max-width:1000px){
     .main-parent{
         height:95vh;
